golang/httpserver/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    cattle.io/creator: norman
  name: httpservertest
  namespace: default

spec:
  ports:
    - name: 80tcp1-httpservertest
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    workload.user.cattle.io/workloadselector: deployment-default-httpservertest
  sessionAffinity: None
  type: ClusterIP
